--- a/main.html
+++ b/main.html
@@ -20,7 +20,10 @@
           <th>Time taken (s)</th>
         </tr>
       </thead>
-      <tbody id="output"></tbody>
+      <tbody id="output">
+		  <tr id ="initial"><td colspan="2">Loading...</td></tr>
+	  </tbody>
+		
     </table>
 
     <script type="text/javascript" src="./script.js"></script>
